# SearchEngine

SearchEngine/SearchEngine/: CMakeLists.txt  SearchEngine.cpp
SearchEngine/SearchEngine/HTTPClient/: CMakeLists.txt
SearchEngine/SearchEngine/HTTPClient/crawl/: CMakeLists.txt  Crawler.cpp  Crawler.h  DataBaseManager.cpp  DataBaseManager.h  Indexer.cpp  Indexer.h  IniParser.cpp  IniParser.h  config.ini  crawl.cpp
SearchEngine/SearchEngine/HTTPClient/crawl/HTMLDB/: CMakeLists.txt
SearchEngine/SearchEngine/HTTPClient/crawl/HTMLDownloaded/: CMakeLists.txt
SearchEngine/SearchEngine/HTTPServer/: CMakeLists.txt  Server.h  main.cpp
